# spreadsheet

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
src/: app.cpp  app.h  core.cpp  core.h  formula.cpp  formula.h  platform.h  platform_macos.mm  platform_win32.cpp  platform_x11.cpp
src/app/: app.cpp  app.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  renderer.cpp  renderer.h
src/core/: cell.h  core.cpp  core.h  csv.cpp  csv.h  ods.cpp  ods.h  spreadsheet.cpp  spreadsheet.h
src/formula/: formula.cpp  formula.h
src/formula/functions/: abs.cpp  abs.h  avg.cpp  avg.h  count.cpp  count.h  dispatch.cpp  extended.cpp  extended.h  function_base.cpp  function_base.h  if.cpp  if.h  max.cpp  max.h  min.cpp  min.h  power.cpp  power.h  round.cpp  round.h  sqrt.cpp  sqrt.h  sum.cpp  sum.h
src/platform/: macos.mm  platform.h  tui.cpp  win32.cpp  x11.cpp
